fix: contaction info

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>简历 | 陈腾</title>
+  <title>Web开发 | 陈腾</title>
   <link rel="stylesheet" href="main?_inline">
   <base target="_blank">
 </head>
@@ -35,7 +35,7 @@
     <section class="contact">
       <ul>
         <li>
-          <a href="http://wuhaolin.cn">
+          <a href="https://blog.chenteng.me">
             <span class="contact-link">https://blog.chenteng.me</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
@@ -68,7 +68,7 @@
           </a>
         </li>
         <li>
-          <a href="tel:13541295797">
+          <a href="tel:13387575835">
             <span class="contact-link">133 8757 5835</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
