--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Web开发 | 陈腾</title>
+  <title>Web前端 & Node.js | 陈腾</title>
   <link rel="stylesheet" href="main?_inline">
   <base target="_blank">
 </head>
 <body>
-<p class="last-modified">最后更新于2018年6月</p>
+<p class="last-modified">最后更新于2019年4月</p>
 <a class="download-pdf" href="resume.pdf">下载 PDF</a>
 
 <main class="content">
@@ -27,9 +27,9 @@
     <section class="info">
       <ul>
         <li>男 / 1993.10</li>
-        <li>工作年限：3 年</li>
+        <li>工作年限：3.5 年</li>
         <li>武汉工程大学</li>
-        <li>计算机网络</li>
+        <li>计算机网络<sub>(专科)</sub></li>
       </ul>
     </section>
     <section class="contact">
@@ -111,52 +111,59 @@
               <a class="btn item-more" href="javascript:;">web前端 & Node.js</a>
             </header>
             <div class="item-bd">
-              <h4 class="item-des">倍牛港股交易平台</h4>
+              <h4 class="item-des">优投顾 App 投顾高手项目</h4>
               <ul class="section-content">
-                <li>从 0 到 1 独自完成包括开户、账户、股票交易、出入金，历史等功能模块</li>
-                <li>基于公司内部 <code>RPC</code> 框架的 <code>Node.js</code> web 服务。服务端使用 <code>Express</code> 框架，调用底层<code>C++</code>接口</li>
-                <li>使用 <code>Promise</code>、<code>co/Generator</code> 等进行进行流程控制，聚合接口，优化转存数据结构，使之最大程度满足业务需求</li>
-                <li>前端使用传统库 <code>jQuery</code> 配合模板引擎处理交互，<code>Gulp</code> 处理静态资源，保证页面的轻量与低版本 IE 的适配需求 </li>
+                <li>负责公司核心产品之一的 <a href="https://www.upchina.com/sub/dl_app_ytg.html">优投顾App</a>非原生部分的前端开发工作，建立百万用户与投顾之间的互动桥梁。</li>
+                <li>服务器端使用 Node.js服务（<code>Express</code> 框架）作为 BFF 层，聚合众多后端数据接口，根据 UI 设计前端接口。服务器页面直出与异步请求相结合，兼顾用户体验与性能。</li>
+                <li>前端采用传统多页面模式（<code>Vue.js</code>框架）,<code>JS Bridge</code>多开页面及其他复杂 Native 交互。前后端统一<code>ES6</code>语法，使用<code>webpack</code>构建前端代码</li>
               </ul>
             </div>
-            <div class="item-bd">
+            <!-- <div class="item-bd">
               <h4 class="item-des">港股开户代理人平台</h4>
               <ul class="section-content">
                 <li>包括账号系统、扫码拉新开户、代理人收益主页、客户盈亏概览等全部功能的开发</li>
                 <li>使用 <code>Express</code>和 <code>Vue.js</code>开发的移动端 <code>SPA</code>。服务器提供 <code>RESTful API</code>配合 <code>vue-router</code> 的前端路由</li>
                 <li>使用 <code>Dchache</code>（内部的缓存服务，类似 Redis 键值对方式存储数据，有数据自动落地 DB机制）存储、缓存业务数据</li>
               </ul>
-            </div>
+            </div> -->
             <div class="item-bd">
-              <h4 class="item-des">优投顾 Hybrid App 投顾高手项目</h4>
+              <h4 class="item-des">倍牛港股交易平台</h4>
               <ul class="section-content">
-                <li>用户侧的 App 内嵌 H5 页面，功能类似微博，有信息流、问答、视频、文章等功能模块</li>
-                <li>后端 <code>Node.js</code> 的接口调用，前端通过 App 提供的 <code>JS Bridge</code>进行 Native 交互，多端参与的联调与合作</li>
-                <li>前端 <code>JS</code> 异常捕获上报，在服务端输出日志，配合 <code>Fiddler</code> 等工具进行接口和页面的开发调试</li>
+                <li>公司合作的<a href="https://www.9beiniu.com/">倍牛证券</a>web端项目，从0到1完成包括开户、账户、股票交易、出入金，历史等功能模块</li>
+                <li><code>Node.js</code> web 服务，依托公司的 RPC 框架（腾讯开源 <a href="https://github.com/TarsCloud">Tars</a>部署，调用其他基础服务。</li>
+                <li>采用 MVC 模式组织代码，细粒度划分功能模块，提取公共路由中间件。</li>
+                <li>大量的基于ejs模板的服务器端渲染，便于组装填充数据提升性能。使用 Gulp、Babel 等工具提升开发效率与体验。 </li>
               </ul>
+            </div>
+            <div class="summary">
+              在职期间参与众多类似以上项目。长期思考尝试基于 Node.js 技术栈的大前端开发。对于web端开发效率、性能与用户体验、代码质量都有较多的思考与经验。曾获公司年度优秀员工。
             </div>
           </div>
 
           <div class="item">
             <header class="item-hd company isoftstone">
-              <h3 class="item-name">软通动力（武汉）</h3>
+              <h3 class="item-name">软通动力（武汉）<sub>MIS部门,非外包</sub></h3>
               <span class="item-time">2015.12 至 2017.05</span>
               <a class="btn item-more" href="javascript:;">web前端</a>
             </header>
             <div class="item-bd">
               <h4 class="item-des">iPSA采购管理系统</h4>
               <ul class="section-content">
-                <li>参与实施软通集团内部采购系统采购、资产管理、订单合同管理、出入库等功能前端开发</li>
-                <li>推行使用国产 <code>MVVM</code> 框架 <code>Avalon.js</code> 替代 jQuery ，满足兼容低版本 IE 的同时，解决复杂业务逻辑大量DOM操作的痛点</li>
-                <li>与同事共同编写维护 Avalon 社区的半成品 UI 库，根据业务需求定制封装 UI组件，提升代码复用率，提高生产效率</li>
+                <li>作为核心前端开发参与实施软通集团内部4万+员工日常使用的采购系统。包括用户端与管理端的采购、资产管理、订单合同管理、出入库等功能。</li>
+                <li>使用<code>Avalon.js</code> 作为核心框架，编写可维护性更高的前端代码，高效应对表单众多的业务需求。</li>
+                <li>编写基于 Avalon 官方的半成品 UI 库，根据业务需求定制封装基础 UI 组件，提高代码复用率，提升开发效率。</li>
               </ul>
             </div>
             <div class="item-bd">
-              <h4 class="item-des">部门知识管理系统开发</h4>
+              <h4 class="item-des">知识管理系统开发</h4>
               <ul class="section-content">
-                <li>供部门内部使用的知识管理系统，有系统首页文章列表，编辑，发布，点赞评论，后台管理等功能页面</li>
-                <li>使用诸如 <code>Less</code>、<code>Avalon.js</code>编写前端代码，使用 <code>webpack</code>进行工程化，作为打破前后端混合开发格局的试点项目</li>
+                <li>供部门内部使用的知识管理系统，基本功能完备的 CMS 系统，注册登录、发回帖、管理等功能。</li>
+                <li>既是内部需求也是<code>Avalon.js</code>前端框架的初步试用。以此项目作为试点，推翻部门前后端混合开发模式。同时初尝<code>Less</code>、<code>webpack</code>等工程化工具，新框架前端组件开发。</li>
               </ul>
+            </div>
+
+            <div class="summary">
+              在软通期间，选用新的前端框架，推进实现前后端分离。在团队内部积极宣扬新型前端开发职能，帮助几名实习生小伙伴成功认识并选择前端作为自己的发展方向。
             </div>
           </div>
         </div>
@@ -182,13 +189,13 @@
               </header>
             <div class="item-bd">
               <ul>
-                <li>有博客文章发布管理、后台看板、评论等功能模块，基于开源项目二次开发，部署在 <code>CentOS</code> 云服务器</li>
-                <li>使用 Vue2.0 全家桶（<code>Vue.js</code>、<code>vuex</code>、<code>vue-router</code>）、<code>Sass</code>、<code>Echarts</code> 等编写前端页面，使用 <code>webpack</code> 打包编译前端代码</li>
-                <li>后端使用 <code>Express</code> <code>MongoDB</code> 结合 Node.js 生态处理业务及数据存储，使用 <code>Nginx</code>反向代理服务，<code>PM2</code>管理服务进程及日志</li>
+                <li>部署上线正在使用的个人博客，参考结合众多社区开源博客的技术栈选型，实现功能完善的博客系统，包括后台看板。</li>
+                <li>前端选用 Vue2.x 全家桶（<code>Vue.js</code>、<code>vuex</code>、<code>vue-router</code>）以及<code>Sass</code>、<code>Echarts</code> 等，结合Babel webpack 保证良好的开发体验与开发效率。</li>
+                <li>后端使用 <code>Express</code><code>mongoose</code> 等常见方案。使用 <code>Nginx</code>提供 web service 反向代理，<code>PM2</code>管理服务进程及日志。</li>
               </ul>
             </div>
           </div>
-          
+
           <!-- OAuth -->
           <div class="item">
               <header class="item-hd">
@@ -198,8 +205,8 @@
               </header>
             <div class="item-bd">
               <ul>
-                <li>一个简易的 <code>OAuth2</code> (未全部符合规范)认证服务器，可以向第三方应该提供用户授权登录服务</li>
-                <li>使用 <code>MySQL</code> 存储第三方 App 相关信息和用户资源，<code>Cookie-Session</code>机制管理用户状态 </li>
+                <li>为理解 OAuth 规范而开发的基于 Node.js 的一个简易的 <code>OAuth2</code> (未全部符合规范)认证服务器，可以向第三方应该提供用户授权登录服务</li>
+                <li>使用 <code>MySQL</code> 做数据持久化。实现中包含 Cookie-Session 用户状态管理机制等。 </li>
               </ul>
             </div>
           </div>
@@ -215,14 +222,12 @@
         <div class="section-bd">
           <div class="item">
             <header class="item-hd">
-              <span class="item-skill">HTML5/CSS3</span>
+              <span class="item-skill">HTML/CSS</span>
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>熟练掌握从 UI 设计稿到静态页面的精准 UI 还原</li>
-                <li>熟悉 <code>HTML</code> 语义化标签的使用，配合 CSS 完成各种页面布局</li>
-                <li>熟悉 <code>CSS3</code> 新特性，正确应用 CSS 写出高质量可复用的样式</li>
-                <li>掌握<code>Less, Stylus</code>等 CSS 预处理器的使用</li>
+                <li>熟练编写语义化的 HTML(5)，模块化的 CSS(3)，完成较复杂的页面布局</li>
+                <li>熟悉<code>Less, Sass</code>等 CSS预处理和模块化工具</li>
               </ul>
             </div>
           </div>
@@ -232,21 +237,9 @@
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>熟练使用原生 JS 进行页面交互逻辑的开发 </li>
-                <li>熟悉 <code>ES.next</code> 新语法特性，熟悉 JS 语言特性，掌握其基本性能优化</li>
-                <li>熟悉<code>Vue.js</code>、 <code>jQuery</code> 等常用框架的使用与调试</li>
-              </ul>
-            </div>
-          </div>
-          <div class="item">
-            <header class="item-hd">
-              <span class="item-skill">前端工程化</span>
-            </header>
-            <div class="item-bd">
-              <ul class="section-content">
-                <li>熟练使用 <code>Webpack</code>和 <code>Gulp</code> 构建前端代码</li>
-                <li>熟悉 CommonJS、AMD、ES6 等模块化规范</li>
-                <li>习惯使用 <code>ESlint</code> 等工具保持良好的代码规范</li>
+                <li>熟悉原生 JavaScript, 对 JS 语言特性有深入理解 </li>
+                <li>熟悉 <code>ES.next</code> 新语法特性，习惯并熟练使用新的语言规范编写代码</li>
+                <li>熟悉Vue.js、jQuery 等常用 JS 框架及其生态，了解 React 等其他常见框架</li>
               </ul>
             </div>
           </div>
@@ -256,21 +249,35 @@
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>掌握 <code>Node.js</code> 标准库及模型，在实际项目中多处使用 <code>Node.js</code></li>
+                <li>掌握 Node.js 标准库及模型，多次在项目中实践 Node.js</li>
                 <li>熟悉 <code>Express</code> 、<code>Koa</code> 等框架及其生态的使用</li>
-                <li>掌握基本调试方法，能快速定位问题</li>
+                <li>基本 debug 能力，能快速定位问题</li>
               </ul>
             </div>
           </div>
           <div class="item">
             <header class="item-hd">
-              <span class="item-skill">服务器端</span>
+              <span class="item-skill">前端工程化</span>
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>熟悉 <code>HTTP</code> 协议，掌握其基本机制原理，熟悉 <code>Fiddler</code> 等抓包调试工具</li>
-                <li>掌握<code>Linux</code>服务器基本操作及维护，工作、业余频繁使用 <code>CentOS</code> 操作系统</li>
-                <li>掌握 <code>MySQL</code> 及 <code>MongoDB</code> 等数据库的基本操作使用，熟练编写常用 <code>SQL</code> 语句</li>
+                <li>熟练使用 <code>Webpack</code>、<code>Gulp</code> 构建前端代码</li>
+                <li>熟悉 CommonJS、AMD、ES6 等模块化规范，能运用模块化、面向对象等方式编程</li>
+                <li>习惯使用 <code>ESlint</code> 等工具保持良好的代码规范，对 <code>TypeScript</code> 有基本了解并很感兴趣</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="item">
+            <header class="item-hd">
+              <span class="item-skill">其他</span>
+            </header>
+            <div class="item-bd">
+              <ul class="section-content">
+                <li>了解 <code>Go</code>语言，对使用 Golang 做 web 开发很感兴趣</li>
+                <li>掌握 HTTP 协议基本原理，熟悉 Fiddler 等辅助网络调试工具</li>
+                <li>掌握 Linux 服务器基本使用，服务在Linux机器的部署，对容器化技术感兴趣</li>
+                <li>掌握基本的 web 开发服务器端知识，常用基本 SQL 语句编写</li>
               </ul>
             </div>
           </div>
