update fro new pit

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <base target="_blank">
 </head>
 <body>
-<p class="last-modified">最后更新于2019年7月</p>
+<p class="last-modified">最后更新于2020年4月</p>
 <a class="download-pdf" href="resume.pdf">下载 PDF</a>
 
 <main class="content">
@@ -27,9 +27,9 @@
     <section class="info">
       <ul>
         <li>男 / 1993.10</li>
-        <li>工作年限：3.5 年</li>
-        <li>武汉工程大学<sub>职业技术学院</sub</li>
-        <li>计算机网络<sub>专科</sub></li>
+        <li>工作年限：4.5 年</li>
+        <li>武汉工程大学<sub>专科</sub</li>
+        <li>计算机网络</li>
       </ul>
     </section>
     <section class="contact">
@@ -114,21 +114,21 @@
               <h4 class="item-des">优投顾、股牛牛APP产品移动端web开发</h4>
               <ul class="section-content">
                 <li>负责公司核心产品 <a href="https://www.upchina.com/sub/dl_app_ytg.html">优投顾</a>、股牛牛App中投顾业务开发，建立百万用户与投顾之间的互动桥梁</li>
-                <li>服务器端使用 <code>Node.js</code>服务作为 BFF 层，基于<a href="https://github.com/TarsCloud"><code>TAF/Tars</code></a>RPC框架，调用其他基础服务接口进行聚合优化，保障前端体验与性能</li>
-                <li>前端使用<code>Vue.js</code>与<code>JSBridge</code>进行Hybrid开发，构建交互复杂的移动端web应用</li>
+                <li>服务器端使用 <code>Node.js</code>服务作为 BFF 层，调用其他基础服务接口进行聚合优化，保障前端体验与性能</li>
+                <li>前端使用<code>Vue.js</code>与<code>JSBridge</code>进行 Hybrid 开发，构建交互复杂的移动端web应用</li>
               </ul>
             </div>
             <div class="item-bd">
-              <h4 class="item-des">倍牛证券、东北证券等券商业务web开发</h4>
+              <h4 class="item-des">阿尔法国际证券、东北证券等券商业务web开发</h4>
               <ul class="section-content">
-                <li>负责<a href="https://www.9beiniu.com/">倍牛证券</a>交易平台/开户系统web端开发，东北证券投顾/产品签约业务功能模块开发开发</li>
-                <li>使用<code>Sequelize</code>配合<code>Dcache</code>(TAF框架配套的缓存服务，类似 Redis)实现业务逻辑</li>
+                <li>负责<a href="https://www.9beiniu.com/">阿尔法国际证券</a>交易平台/开户系统web端开发，东北证券、国元证券等券商互联网投顾业务功能模块开发开发</li>
+                <li>后端基于<a href="https://github.com/TarsCloud"><code>TAF</code>(Tencent/Tars)</a>微服务框架使用<code>Sequelize</code>等Node.js ORM配合<code>Dcache</code>(TAF框架配套的缓存服务)实现业务逻辑</li>
                 <li>PC端使用 <code>Express</code>框架 EJS 模板引擎服务端渲染，满足高性能与SEO需要</li>
-                <li>移动端大多使用 Vue 全家桶构建 SPA，提升开发效率的同时兼顾开发体验</li>
+                <li>前端大多使用 Vue 全家桶构建 SPA，提升开发效率的同时兼顾开发体验</li>
               </ul>
             </div>
             <div class="summary">
-              长期思考尝试基于 Node.js 技术栈的大前端开发。对于web端开发效率、性能与用户体验、代码质量都有较多的思考与经验。获2018年公司年度优秀员工。
+              长期基于 Node.js 技术栈的大前端开发实践。对于Node.js构建后端服务、web 服务开发效率、性能与用户体验、代码质量都有较多的思考与经验。获2018年公司年度优秀员工。
             </div>
           </div>
 
@@ -251,12 +251,12 @@
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>熟练运用 CSS3、Html5 编写兼容主流浏览器的页面</li>
+                <li>熟练运用 CSS3、HTML5 编写兼容主流浏览器的页面</li>
                 <li>熟悉Less, Sass等 CSS预处理和模块化工具</li>
-                <li>熟悉原生 JavaScript, ESNext 深入理解语言特性</li>
+                <li>扎实的 JavaScript 语言基础，掌握 ESNext 语言新特性</li>
                 <li>熟练使用 Vue.js 框架及其生态，了解 React 等其他常见框架</li>
                 <li>熟悉 CommonJS、AMD、ES Module 等模块化规范，熟练使用 Webpack、Gulp 等构建打包工具</li>
-                <li>习惯使用 ESlint 等工具保持良好的代码规范，对 TypeScript 有基本了解并很感兴趣</li>
+                <li>习惯使用 ESlint 等工具保持良好的代码规范，基本 TypeScript 基本使用</li>
               </ul>
             </div>
           </div>
@@ -266,9 +266,9 @@
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>掌握 Node.js 标准库及模型，有众多 Node.js 构建 web 服务实战经验</li>
+                <li>掌握 Node.js 标准库及模型，有众多 Node.js 实战经验</li>
                 <li>熟练 Express、Koa 等web框架及其生态的使用</li>
-                <li>基本 debug 能力，能快速定位问题</li>
+                <li>良好 debug 能力，基本性能调优，能快速分析解决问题</li>
               </ul>
             </div>
           </div>
@@ -279,12 +279,12 @@
             </header>
             <div class="item-bd">
               <ul class="section-content">
-                <li>掌握 HTTP 协议，能使用抓包工具分析请求快速定位问题</li>
-                <li>掌握基本 Linux 操作系统的使用，服务在 Linux 机器的部署、运维，国内云服务器使用</li>
-                <li>了解 Golang ，对使用 Golang 构建web 应用很感兴趣</li>
-                <li>掌握MySQL、MongoDB的基本使用，SQL 语句编写及Node.js ORM的使用</li>
-                <li>熟悉Git及Git服务的操作流程</li>
-                <li>擅用搜索引擎和社区资源解决问题</li>
+                <li>熟悉 HTTP 协议，了解 TCP/IP 协议,熟练定位解决网络请求问题</li>
+                <li>掌握基本 Linux 操作系统的使用，常见 web 服务在 Linux 机器的部署，国内云服务器使用</li>
+                <li>基本掌握 Golang，对使用 Golang 构建web 应用很感兴趣</li>
+                <li>掌握MySQL、MongoDB、Redis等数据库的基本使用，及对应Node.js ORM、驱动库的使用</li>
+                <li>掌握 Docker 容器化的基本使用</li>
+                <li>擅用搜索引擎和社区资源解决问题，热心社区技术动态</li>
               </ul>
             </div>
           </div>
