--- a/src/index.html
+++ b/src/index.html
@@ -135,14 +135,14 @@
           <div class="item">
             <header class="item-hd company isoftstone">
               <h3 class="item-name">软通动力（武汉）<sub>MIS部门,非外包</sub></h3>
-              <span class="item-time">2016.3 至 2017.05</span>
+              <span class="item-time">2016.03 至 2017.05</span>
               <a class="btn item-more" href="javascript:;">web前端</a>
             </header>
             <div class="item-bd">
               <h4 class="item-des">iPSA采购管理系统</h4>
               <ul class="section-content">
                 <li>作为核心前端开发参与实施软通集团内部4万+员工日常使用的采购系统</li>
-                <li>使用<code>Avalon.js</code> 作为核心框架，编写可维护性更高的前端代码，高效应对表单众多的业务需。</li>
+                <li>使用<code>Avalon.js</code> 作为核心框架，编写可维护性更高的前端代码，高效应对表单众多的业务需求。</li>
                 <li>根据业务需求定制封装基础<code>Avalon.js</code>UI 组件库，提高代码复用率，提升开发效率</li>
               </ul>
             </div>
@@ -162,7 +162,7 @@
           <div class="item">
             <header class="item-hd company xqxj">
               <h3 class="item-name">相交科技（武汉）</h3>
-              <span class="item-time">2015.10 至 2015.12</span>
+              <span class="item-time">2015.10 至 2016.03</span>
               <a class="btn item-more" href="javascript:;">web前端</a>
             </header>
             <div class="item-bd">
@@ -230,7 +230,7 @@
               </header>
             <div class="item-bd">
               <ul>
-                <li>为理解 OAuth 规范而开发的基于 Node.js 的一个简易的 <code>OAuth2</code> (未全部符合规范)认证服务器，可以向第三方应该提供用户授权登录服务</li>
+                <li>为理解 OAuth 规范而开发的基于 Node.js 的一个简易的 <code>OAuth2</code> (未全部符合规范)认证服务器，可以向第三方应用提供用户授权登录服务</li>
                 <li>使用 <code>MySQL</code> 做数据持久化。实现中包含 Cookie-Session 用户状态管理机制等。 </li>
               </ul>
             </div>
