--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
               <h4 class="item-des">知识管理系统</h4>
               <ul class="section-content">
                 <li>供部门内部使用的知识管理系统，基本功能完备的 CMS 系统，注册登录、发回帖、管理等功能</li>
-                <li><code>Avalon.js</code>前端框架的是水，部门用<code>jQuery</code>前后端混合开发的革命。同时初尝<code>Less</code>、<code>webpack</code>等工程化工具，新框架前端组件开发</li>
+                <li><code>Avalon.js</code>前端框架的试水，部门用<code>jQuery</code>前后端混合开发的革命。同时初尝<code>Less</code>、<code>webpack</code>等工程化工具，新框架前端组件开发</li>
               </ul>
             </div>
 
